--- a/cherry-options/css-custom.css
+++ b/cherry-options/css-custom.css
@@ -22,3 +22,13 @@ body #motopress-main.main-holder .content-holder ul.products li.product >a img, 
     height: 100px;
     margin-left: 12px;
 }
+.woocommerce #content .quantity input.qty, .woocommerce .quantity input.qty,
+.woocommerce-page #content .quantity input.qty, .woocommerce-page .quantity input.qty {
+    width: 61px !important;
+    padding-left: 8px !important;
+    height: 24px;
+    text-align: left;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
