--- a/cherry-options/css-custom.css
+++ b/cherry-options/css-custom.css
@@ -26,3 +26,13 @@ body #motopress-main.main-holder .content-holder ul.products li.product >a img, 
     width:auto;
     height:auto;
 }
+
+.woocommerce #content .quantity input.qty, .woocommerce .quantity input.qty, .woocommerce-page #content .quantity input.qty, .woocommerce-page .quantity input.qty {
+    width:61px !important;
+    height:24px !important;
+    padding-left:8px !important;
+    text-align:left;
+    -webkit-box-sizing:border-box;
+    -moz-box-sizing:border-box;
+    box-sizing:border-box;
+}
